syntax = "proto3";

package rsca.api;
option go_package = "github.com/na4ma4/rsca/api";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
// import "google/api/annotations.proto";
// import "api/common.proto";

message Empty {}

message TriggerAllResponse {
    repeated string names = 1;
}

message TriggerInfoResponse {
    repeated string names = 1;
}

message Envelope {
    Member sender = 10;
    Members recipient = 11;
}

message Members {
    repeated string id = 10;
    repeated string name = 11;
    repeated string capability = 12;
    repeated string tag = 13;
    repeated string service = 14;
}

message Member {
    string id = 1;
    string internal_id = 2;
    string name = 10;
    repeated string capability = 11;
    repeated string tag = 12;
    repeated string service = 13;

    string version = 90;
    string git_hash = 91;
    string build_date = 92;

    google.protobuf.Timestamp last_seen = 100;
    google.protobuf.Duration ping_latency = 102;

    InfoStat info_stat = 200;
    google.protobuf.Timestamp system_start = 201;
    google.protobuf.Timestamp process_start = 202;


    // Only used in rendering host lists, not transferred over the wire.
    string last_seen_ago = 1001;
    string latency = 1003;
}

message InfoStat {
    google.protobuf.Timestamp timestamp = 1;
    string hostname = 21;
    uint64 uptime = 22;
    uint64 boot_time = 23;
    // number of processes
    uint64 procs = 24;
    // ex: freebsd, linux
    string os = 25;
    // ex: ubuntu, linuxmint
    string platform = 26;
    // ex: debian, rhel
    string platform_family = 27;
    // version of the complete OS
    string platform_version = 28;
    // version of the OS kernel (if available)
    string kernel_version = 29;
    // native cpu architecture queried at runtime, as returned by `uname -m` or empty string in case of error
    string kernel_arch = 30;
    string virt_system = 31;
    // guest or host
    string virt_role = 32;
    // ex: uuid
    string host_id = 33;
}

// message Recipient {
//     repeated string id = 10;
//     repeated string name = 11;
//     repeated string capability = 12;
//     repeated string tag = 13;
//     repeated string service = 14;
// }

message Message {
    Envelope envelope = 1;
    oneof message {
        RegisterMessage register_message = 100;
        PingMessage ping_message = 101;
        PongMessage pong_message = 102;
        EventMessage event_message = 103;
        TriggerAllMessage trigger_all_message = 104;
        RepeatRegistrationMessage repeat_registration_message = 105;
        MemberUpdateMessage member_update_message = 106;
    }
}

message RegisterMessage {
    Member member = 1;
}

message PingMessage {
    string id = 1;
    string stream_id = 2;
    google.protobuf.Timestamp ts = 4;
}

message PongMessage {
    string id = 1;
    string stream_id = 2;
    google.protobuf.Timestamp ts = 4;
}

message TriggerAllMessage {
    string id = 1;
}

message RepeatRegistrationMessage {
    string id = 1;
}

message MemberUpdateMessage {
    Member member = 1;
}

enum Status {
    OK = 0;
    WARNING = 1;
    CRITICAL = 2;
    UNKNOWN = 3;
}

enum CheckType {
    HOST = 0;
    SERVICE = 1;
}

message EventMessage {
    string hostname = 1;
    CheckType type = 2;
    string check = 3;
    Status status = 4;
    string output = 5;
    string output_error = 10;
    string perfdata = 6;
    google.protobuf.Timestamp request_timestamp = 7;
    int32 retries = 8;
    string id = 9;
}
